fix: [PD-406] home menu alignment of icons and menu

--- a/src/component/HeaderGenders/HeaderGenders.style.scss
+++ b/src/component/HeaderGenders/HeaderGenders.style.scss
@@ -22,7 +22,7 @@
   .GenderButton {
     &-Container {
       &::before{
-        left : 0px;
+        left : -7px;
       }
     }
     &-Button {
