--- a/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -184,7 +184,7 @@
             letter-spacing: 0px;
             opacity: 1;
             width: 200px;
-            height: 18px;
+            height: 20px;
             white-space: nowrap;
             overflow: hidden;
             display: inline-block;
